--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 <section class="hero" style="background-image: url('https://drive.google.com/file/d/1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx/view?usp=sharing')">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Make a new friend today</h1>
+			<h1 class="editable">전선아의 포트폴리오</h1>
 			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
 			<div class="cta button alt"><a href="#">Join Now</a></div>
 		</div>
