--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
-<section class="hero" style="background-image: url('https://drive.google.com/file/d/1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx/view?usp=sharing')">
+<section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx')">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">전선아의 포트폴리오</h1>
