--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">전선아의 포트폴리오</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
-			<div class="cta button alt"><a href="#">Join Now</a></div>
+			<p class="subtext editable">자신의 강점과 약점을 이해하고 지속적으로 개선하는 성장 마인드를 가진 
+사람이자 꾸준한 자기 개발로 변화를 주도하는 IT 신입 지원자 입니다. </p>
+			<div class="cta button alt"><a href="#">Explore my creations</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
