--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: Home
-description: The latest app to help you find new friends with common interests.
+title: 전선아의 포트폴리오
+description: Connect with like-minded individuals and explore my journey of growth and development in IT.
 image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
@@ -8,10 +8,9 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 <section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx')">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">전선아의 포트폴리오</h1>
-			<p class="subtext editable">자신의 강점과 약점을 이해하고 지속적으로 개선하는 성장 마인드를 가진 
-사람이자 꾸준한 자기 개발로 변화를 주도하는 IT 신입 지원자 입니다. </p>
-			<div class="cta button alt"><a href="#">Explore my creations</a></div>
+			<h1 class="editable">전선아의 IT 포트폴리오</h1>
+			<p class="subtext editable">저는 자신의 강점과 약점을 이해하고 지속적으로 개선하는 성장 마인드를 갖춘 사람입니다. IT 분야에서 꾸준한 자기 개발을 통해 변화를 이끌어가고 있습니다.</p>
+			<div class="cta button alt"><a href="#">Explore my journey</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
@@ -22,7 +21,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+				<p class="editable">Making new friends in the adult world can be challenging. Frisco is your perfect matchmaker, connecting you with the most interesting people in your area.</p>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
@@ -34,7 +33,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+				<p class="editable">The more you share with Frisco, the better it understands you. Discover people who share your passions and interests.</p>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
@@ -45,8 +44,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+				<h2 class="editable">Swipe and connect</h2>
+				<p class="editable">Frisco presents potential friends for you to swipe through. Swipe left to pass or right to start chatting and expand your social circle.</p>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
@@ -58,7 +57,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="inner-hero text-container">
 			<div class="hero-text-container">
 				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
+				<p class="subtext editable">It's free, fun, and an exciting way to meet new people.</p>
 				<div class="cta button alt"><a href="#">Join Now</a></div>
 			</div>
 		</div>
