--- a/index.html
+++ b/index.html
@@ -5,62 +5,61 @@ image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
-<section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx')">
+<section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx'); height: 600px; background-size: cover; background-position: center; color: #ffffff; text-align: center; display: flex; justify-content: center; align-items: center;">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">전선아의 포트폴리오</h1>
-			<p class="subtext editable">자신의 강점과 약점을 이해하고 지속적으로 개선하는 성장 마인드를 가진 
-사람이자 꾸준한 자기 개발로 변화를 주도하는 IT 신입 지원자 입니다. </p>
-			<div class="cta button alt"><a href="#">Explore my creations</a></div>
+			<h1 class="editable" style="font-size: 3.5rem; margin-bottom: 20px;">전선아의 포트폴리오</h1>
+			<p class="subtext editable" style="font-size: 1.5rem;">자신의 강점과 약점을 이해하고 지속적으로 개선하는 성장 마인드를 가진 
+			사람이자 꾸준한 자기 개발로 변화를 주도하는 IT 신입 지원자 입니다.</p>
+			<div class="cta button alt" style="margin-top: 30px;"><a href="#" style="padding: 10px 20px; background-color: #4CAF50; color: #ffffff; text-decoration: none; border-radius: 5px; transition: background-color 0.3s;">Explore my creations</a></div>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
-	<section class="info" id="learn-more">
+	<section class="info" style="background-color: #f0f0f0; padding: 50px 0;">
 		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+			<div class="text" style="flex: 1; padding-right: 20px;">
+				<h2 class="editable" style="font-size: 2.5rem; margin-bottom: 20px;">Introduce yourself</h2>
+				<p class="editable" style="font-size: 1.25rem;">Making new friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
 			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			<div class="image" style="flex: 1; padding-left: 20px;">
+				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" style="width: 100%; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 			</div>
 		</div>
 	</section>
 
-	<section class="info">
+	<section class="info" style="padding: 50px 0;">
 		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+			<div class="text" style="flex: 1; padding-right: 20px;">
+				<h2 class="editable" style="font-size: 2.5rem; margin-bottom: 20px;">Pick your interests</h2>
+				<p class="editable" style="font-size: 1.25rem;">The more you tell Frisco, the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
 			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			<div class="image" style="flex: 1; padding-left: 20px;">
+				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" style="width: 100%; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 			</div>
 		</div>
 	</section>
 
-	<section class="info">
+	<section class="info" style="background-color: #f0f0f0; padding: 50px 0;">
 		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+			<div class="text" style="flex: 1; padding-right: 20px;">
+				<h2 class="editable" style="font-size: 2.5rem; margin-bottom: 20px;">Swipe and go</h2>
+				<p class="editable" style="font-size: 1.25rem;">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
 			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			<div class="image" style="flex: 1; padding-left: 20px;">
+				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" style="width: 100%; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 			</div>
 		</div>
 	</section>
 
-	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
+	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %}); height: 400px; background-size: cover; background-position: center; color: #ffffff; text-align: center; display: flex; justify-content: center; align-items: center;">
 		<div class="inner-hero text-container">
 			<div class="hero-text-container">
-				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-				<div class="cta button alt"><a href="#">Join Now</a></div>
+				<h2 class="editable" style="font-size: 3rem; margin-bottom: 20px;">Find your buddy today</h2>
+				<p class="subtext editable" style="font-size: 1.5rem;">It's free, fun, and an exciting way to meet new people.</p>
+				<div class="cta button alt" style="margin-top: 30px;"><a href="#" style="padding: 10px 20px; background-color: #4CAF50; color: #ffffff; text-decoration: none; border-radius: 5px; transition: background-color 0.3s;">Join Now</a></div>
 			</div>
 		</div>
 	</section>
-</div> 꾸며줘
+</div>
