--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>전선아의 포트폴리오</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600;700&display=swap">
     <style>
         body {
             font-family: 'Noto Sans KR', sans-serif;
@@ -136,7 +136,7 @@
             </div>
         </section>
 
-        <section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
+        <section class="hero" style="background-image: url('https://unsplash.it/2000/1322?a=.png')">
             <div class="inner-hero text-container">
                 <div class="hero-text-container">
                     <h2 class="editable">Find your buddy today</h2>
