--- a/index.html
+++ b/index.html
@@ -1,150 +1,66 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>전선아의 포트폴리오</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600;700&display=swap">
-    <style>
-        body {
-            font-family: 'Noto Sans KR', sans-serif;
-            line-height: 1.6;
-        }
+---
+title: Home
+description: The latest app to help you find new friends with common interests.
+image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
+bottom_image: https://unsplash.it/2000/1322?a=.png
+---
 
-        .hero-text-container h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            color: #ffffff;
-        }
+<section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx')">
+	<div class="inner-hero text-container">
+		<div class="hero-text-container">
+			<h1 class="editable">전선아의 포트폴리오</h1>
+			<p class="subtext editable">자신의 강점과 약점을 이해하고 지속적으로 개선하는 성장 마인드를 가진 
+사람이자 꾸준한 자기 개발로 변화를 주도하는 IT 신입 지원자 입니다. </p>
+			<div class="cta button alt"><a href="#">Explore my creations</a></div>
+		</div>
+	</div>
+	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
+</section>
 
-        .hero-text-container p {
-            font-size: 1.25rem;
-            font-weight: 400;
-            color: #ffffff;
-        }
+<div class="content">
+	<section class="info" id="learn-more">
+		<div class="container flex">
+			<div class="text">
+				<h2 class="editable">Introduce yourself</h2>
+				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+			</div>
+			<div class="image">
+				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			</div>
+		</div>
+	</section>
 
-        .cta.button.alt a {
-            font-size: 1rem;
-            font-weight: 600;
-            color: #ffffff;
-            background-color: #007BFF;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-        }
+	<section class="info">
+		<div class="container flex">
+			<div class="text">
+				<h2 class="editable">Pick your interests</h2>
+				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+			</div>
+			<div class="image">
+				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			</div>
+		</div>
+	</section>
 
-        .cta.button.alt a:hover {
-            background-color: #0056b3;
-        }
+	<section class="info">
+		<div class="container flex">
+			<div class="text">
+				<h2 class="editable">Swipe and go</h2>
+				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+			</div>
+			<div class="image">
+				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			</div>
+		</div>
+	</section>
 
-        .info .container .text h2 {
-            font-size: 2.5rem;
-            font-weight: 600;
-            color: #333333;
-        }
-
-        .info .container .text p {
-            font-size: 1.125rem;
-            font-weight: 400;
-            color: #666666;
-        }
-
-        .hero-text-container h2 {
-            font-size: 2.5rem;
-            font-weight: 600;
-            color: #ffffff;
-        }
-
-        .hero-text-container .subtext {
-            font-size: 1.25rem;
-            font-weight: 400;
-            color: #ffffff;
-        }
-
-        .hero-text-container .cta.button.alt a {
-            font-size: 1rem;
-            font-weight: 600;
-            color: #ffffff;
-            background-color: #28a745;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .hero-text-container .cta.button.alt a:hover {
-            background-color: #218838;
-        }
-
-        .learn-more a {
-            font-size: 1rem;
-            font-weight: 400;
-            color: #ffffff;
-            text-decoration: none;
-        }
-
-        .learn-more a span.arrow {
-            font-size: 1.5rem;
-        }
-    </style>
-</head>
-<body>
-    <section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx')">
-        <div class="inner-hero text-container">
-            <div class="hero-text-container">
-                <h1 class="editable">전선아의 포트폴리오</h1>
-                <p class="subtext editable">자신의 강점과 약점을 이해하고 지속적으로 개선하는 성장 마인드를 가진 사람이자 꾸준한 자기 개발로 변화를 주도하는 IT 신입 지원자 입니다.</p>
-                <div class="cta button alt"><a href="#">Explore my creations</a></div>
-            </div>
-        </div>
-        <div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
-    </section>
-
-    <div class="content">
-        <section class="info" id="learn-more">
-            <div class="container flex">
-                <div class="text">
-                    <h2 class="editable">Introduce yourself</h2>
-                    <p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
-                </div>
-                <div class="image">
-                    <img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
-                </div>
-            </div>
-        </section>
-
-        <section class="info">
-            <div class="container flex">
-                <div class="text">
-                    <h2 class="editable">Pick your interests</h2>
-                    <p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
-                </div>
-                <div class="image">
-                    <img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
-                </div>
-            </div>
-        </section>
-
-        <section class="info">
-            <div class="container flex">
-                <div class="text">
-                    <h2 class="editable">Swipe and go</h2>
-                    <p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
-                </div>
-                <div class="image">
-                    <img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
-                </div>
-            </div>
-        </section>
-
-        <section class="hero" style="background-image: url('https://unsplash.it/2000/1322?a=.png')">
-            <div class="inner-hero text-container">
-                <div class="hero-text-container">
-                    <h2 class="editable">Find your buddy today</h2>
-                    <p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-                    <div class="cta button alt"><a href="#">Join Now</a></div>
-                </div>
-            </div>
-        </section>
-    </div>
-</body>
-</html>
+	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
+		<div class="inner-hero text-container">
+			<div class="hero-text-container">
+				<h2 class="editable">Find your buddy today</h2>
+				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
+				<div class="cta button alt"><a href="#">Join Now</a></div>
+			</div>
+		</div>
+	</section>
+</div>
