--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<div class="cta button alt"><a href="#">Explore my creations</a></div>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
+	<div class="learn-more"><a href="#learn-more"> more <span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+				<h2 class="editable">KampingMate</h2>
+				<p class="editable">캠핑장 추천 및 캠핑장 관련정보 제공 페이지</p>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
