--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<div class="text">
 				<h2 class="editable">KampingMate</h2>
 				<p class="editable">캠핑장 추천 및 캠핑장 관련정보 제공 페이지</p>
+				<ul>
+					<li>캠핑 초보자들이 사용할 수 있는 웹사이트를 제공하자 !</li>
+					<li>초심자를 위한 가이드 페이지 제공</li>
+					<li>캠핑장에 대한 정보뿐 아니라 캠핑에 대한 연관정보까지 제공</li>
+				</ul>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
