--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">KampingMate</h2>
-				<p class="editable">캠핑장 추천 및 캠핑장 관련정보 제공 페이지</p>
+				<h3 class="editable">캠핑장 추천&캠핑장 관련정보 제공 페이지</h3>
 				<ul>
 					<li>캠핑 초보자들이 사용할 수 있는 웹사이트를 제공하자 !</li>
 					<li>초심자를 위한 가이드 페이지 제공</li>
