--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+				<h2 class="editable">FoodMate</h2>
+				<h3 class="editable">음식메뉴 추천 페이지</h3>
+				<ul>
+					<li>음식도 추천받고,</li>
+					<li>건강하게 직접 해 먹을 수 있는 사이트를 만들자!</li>
+					<li>개인 바디데이터와 사용자가 선택한 음식 추천 조건을 선택</li>
+				</ul>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
