--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+				<h2 class="editable">Campus Connect</h2>
+				<h3 class="editable">안드로이드를 기반으로 한 모바일 학생 명함</h3>
+				<ul>
+					<li>채널에 등록하여 보다 쉽게 본인이 원하는 팀원을 구할 수 있다 !</li>
+					<li>조별과제, 멘토/멘티, 공모전과 같은 대학생활내에서의 활동을 위한 앱</li>
+					<li>공모전 등의 정보도 실시간으로 수집 가능</li>
+				</ul>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
