--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 				</ul>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="https://drive.google.com/file/d/1w-OMX4hIRPzVDsr5XW0NauiJYIKugc0g/view?usp=sharing" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
