--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 				</ul>
 			</div>
 			<div class="image">
+				<span class="editable"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.png" alt="light frisco logo"></span>
 				<img class="editable" src="https://drive.google.com/uc?export=view&id=1w-OMX4hIRPzVDsr5XW0NauiJYIKugc0g" alt="Screenshot" />
 
 			</div>
