--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 				<h2 class="editable">KampingMate</h2>
 				<h3 class="editable">캠핑장 추천&캠핑장 관련정보 제공 페이지</h3>
 				<ul>
-					<li>캠핑 초보자들이 사용할 수 있는 웹사이트를 제공하자 !</li>
+					<li>캠핑 초보자들이 사용가능한 웹사이트를 제공하자 !</li>
 					<li>초심자를 위한 가이드 페이지 제공</li>
 					<li>캠핑장에 대한 정보뿐 아니라 캠핑에 대한 연관정보까지 제공</li>
 				</ul>
 			</div>
 			<div class="image">
+				<span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/CampusConnect.png" alt="Screenshot"></span>
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
 			</div>
 		</div>
