--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 				</ul>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/FoodMate_main.webp" alt="Screenshot"></span>
 			</div>
 		</div>
 	</section>
