--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">개발 언어 & 개발 도</h1>
+			<h1 class="editable">개발 언어 & 개발 도구</h1>
 			<p class="subtext editable">🔍 저는 C언어, HTML5, CSS3, 자바스크립트, jQuery 라이브러리, 자료구조, Python, NLP, 머신러닝, JAVA, 리눅스, 디자인패턴, Matlab, Android Studio, kotlin, JSP, SQL, spring framework를 배웠습니다. </p>
 		</div>
 	</div>
