--- a/about.html
+++ b/about.html
@@ -7,23 +7,23 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">개발 언어 & 개발 도구</h1>
-			<p class="subtext editable">🔍 저는 C언어, HTML5, CSS3, 자바스크립트, jQuery 라이브러리, 자료구조, Python, NLP, 머신러닝, JAVA, 리눅스, 디자인패턴, Matlab, Android Studio, kotlin, JSP, SQL, spring framework를 배웠습니다. </p>
+			<h1 class="editable">Our Story</h1>
+			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
 		</div>
 	</div>
 </section>
 
 <section class="pad">
 	<div class="container">
+		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
 		<ul class="staff">
 			{% for person in site.staff_members %}
 				<li>
 					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
-					<div class="name"><a target="_blank" href="{{ person.personal_link }}">{{ person.name }}</a></div>
+					<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a></div>
 					<div class="position">{{ person.position }}</div>
 				</li>
 			{% endfor %}
 		</ul>
 	</div>
 </section>
-
