--- a/about.html
+++ b/about.html
@@ -5,25 +5,31 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
-	<div class="inner-hero text-container">
-		<div class="hero-text-container">
-			<h1 class="editable">Our Story</h1>
-			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
-		</div>
-	</div>
+    <div class="inner-hero text-container">
+        <div class="hero-text-container">
+            <h1 class="editable">Our Story</h1>
+            <p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+        </div>
+    </div>
 </section>
 
 <section class="pad">
-	<div class="container">
-		<p class="editor-link"><a href="https://github.com/KampingMate/KampingMate" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
-		<ul class="staff">
-			{% for person in site.staff_members %}
-				<li>
-					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
-					<div class="name"><a target="_blank" href="{{ person.personal_link }}">{{ person.name }}</a></div>
-					<div class="position">{{ person.position }}</div>
-				</li>
-			{% endfor %}
-		</ul>
-	</div>
+    <div class="container">
+        <p class="editor-link"><a href="https://github.com/KampingMate/KampingMate" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
+        <ul class="staff">
+            {% for person in site.staff_members %}
+                <li>
+                    <div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
+                    <div class="name">
+                        {% if person.name == 'KampingMate' %}
+                            <a target="_blank" href="{{ person.github_link }}">{{ person.name }}</a>
+                        {% else %}
+                            <a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a>
+                        {% endif %}
+                    </div>
+                    <div class="position">{{ person.position }}</div>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 </section>
