--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ description: We've built an amazing team of developers, marketers, designers and
 image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
-<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+<section class="hero" style="background-image: url({{ page.image }})">
     <div class="inner-hero text-container">
         <div class="hero-text-container">
             <h1 class="editable">Our Story</h1>
@@ -19,9 +19,9 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
         <ul class="staff">
             {% for person in site.staff_members %}
                 <li>
-                    <div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
+                    <div class="square-image" style="background-image: url('{{ person.image_path }}')"></div>
                     <div class="name">
-                        {% if person.name == 'KampingMate' %}
+                        {% if person.name == 'KampingMate' or person.name == 'FOODMATE' %}
                             <a target="_blank" href="{{ person.github_link }}">{{ person.name }}</a>
                         {% else %}
                             <a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a>
