--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
                 <li>
                     <div class="square-image" style="background-image: url('{{ person.image_path }}')"></div>
                     <div class="name">
-                        {% if person.name == 'KampingMate' or person.name == 'FOODMATE' %}
+                        {% if person.name == 'KampingMate' or person.name == 'FOODMATE' or person.name == 'CampusConnect' %}
                             <a target="_blank" href="{{ person.github_link }}">{{ person.name }}</a>
                         {% else %}
                             <a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a>
