--- a/about.html
+++ b/about.html
@@ -7,8 +7,14 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 <section class="hero" style="background-image: url({{ page.image }})">
     <div class="inner-hero text-container">
         <div class="hero-text-container">
-            <h1 class="editable">Our Story</h1>
-            <p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+            <h1 class="editable">My Story</h1>
+            <p class="subtext editable">저는 "지식은 나눌수록 커진다."는 가치관을 바탕으로, 배운 것을 서로 공유하고, 다른 이들의 배움을 도우며 함께 성장하고자 합니다.
+
+저는 다양한 기술과 언어에 대한 열정을 가지고 있으며, 특히 C언어, HTML5, CSS3, 자바스크립트, jQuery, Python, NLP, 머신러닝, JAVA, 리눅스, 디자인 패턴, 
+                Matlab, Android Studio, Kotlin, JSP, SQL, Spring Framework 등을 학습했습니다. 
+                이러한 기술들을 바탕으로 프로젝트를 진행하며, 기술적 문제를 해결하는 능력을 길러왔습니다.
+            끊임없이 배우고 성장하려는 자세로 새로운 기술과 도구를 빠르게 습득할 수 있습니다. 예를 들어, 
+                최근에는 캠핑장 추천 및 관련 정보를 제공하는 웹사이트인 KampingMate를 제작하면서 사용자 경험을 최우선으로 고려한 인터페이스를 설계하고 구현하였습니다.</p>
         </div>
     </div>
 </section>
