--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 저는 다양한 기술과 언어에 대한 열정을 가지고 있으며, 특히 C언어, HTML5, CSS3, 자바스크립트, jQuery, Python, NLP, 머신러닝, JAVA, 리눅스, 디자인 패턴, 
                 Matlab, Android Studio, Kotlin, JSP, SQL, Spring Framework 등을 학습했습니다. 
                 이러한 기술들을 바탕으로 프로젝트를 진행하며, 기술적 문제를 해결하는 능력을 길러왔습니다.
-            끊임없이 배우고 성장하려는 자세로 새로운 기술과 도구를 빠르게 습득할 수 있습니다. 예를 들어, 
-                최근에는 캠핑장 추천 및 관련 정보를 제공하는 웹사이트인 KampingMate를 제작하면서 사용자 경험을 최우선으로 고려한 인터페이스를 설계하고 구현하였습니다.</p>
+            저의 강점은 사용 중심의 사고와 서비스 마인드입니다. 저는 항상 사용자와 고객의 입장에서 생각하며, 그들의 요구와 기대에 부응하기 위해 최선을 다합니다. 또한, 
+                적극적인 문제 해결 태도를 통해 어려운 상황에서도 긍정적으로 해결책을 찾고 실행할 수 있습니다. 
+                예를 들어, 최근 KampingMate 프로젝트에서는 사용자 피드백을 적극 반영하여 서비스 품질을 향상시키고, 사용자 만족도를 높이는 데 기여하였습니다.</p>
         </div>
     </div>
 </section>
