--- a/about.html
+++ b/about.html
@@ -9,13 +9,13 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
         <div class="hero-text-container">
             <h1 class="editable">My Story</h1>
             <p class="subtext editable">
-    저는 <span style="color: blue;"><strong>"지식은 나눌수록 커진다"</strong></span>는 가치관을 바탕으로, 배운 것을 서로 공유하고, 다른 이들의 배움을 도우며 함께 성장하고자 합니다.
+    저는 <span style="color: #2e86c1;"><strong>"지식은 나눌수록 커진다"</strong></span>는 가치관을 바탕으로, 배운 것을 서로 공유하고, 다른 이들의 배움을 도우며 함께 성장하고자 합니다.
 </p>
 <p class="subtext editable">
-    다양한 기술과 언어에 대한 열정을 가지고 있으며, 특히 <span style="color: green;"><strong>C언어, HTML5, CSS3, 자바스크립트, jQuery, Python, NLP, 머신러닝, JAVA, 리눅스, 디자인 패턴, Matlab, Android Studio, Kotlin, JSP, SQL, Spring Framework</strong></span> 등을 학습했습니다. 이러한 기술들을 바탕으로 프로젝트를 진행하며, 기술적 문제를 해결하는 능력을 길러왔습니다.
+    다양한 기술과 언어에 대한 열정을 가지고 있으며, 특히 <span style="color: #2e86c1;"><strong>C언어, HTML5, CSS3, 자바스크립트, jQuery, Python, NLP, 머신러닝, JAVA, 리눅스, 디자인 패턴, Matlab, Android Studio, Kotlin, JSP, SQL, Spring Framework</strong></span> 등을 학습했습니다. 이러한 기술들을 바탕으로 프로젝트를 진행하며, 기술적 문제를 해결하는 능력을 길러왔습니다.
 </p>
 <p class="subtext editable">
-    저의 강점은 <span style="color: purple;"><strong>사용자 중심의 사고</strong></span>와 <span style="color: purple;"><strong>서비스 마인드</strong></span>입니다. 저는 항상 사용자와 고객의 입장에서 생각하며, 그들의 요구와 기대에 부응하기 위해 최선을 다합니다. 또한, <span style="color: orange;"><strong>적극적인 문제 해결 태도</strong></span>를 통해 어려운 상황에서도 긍정적으로 해결책을 찾고 실행할 수 있습니다. 예를 들어, 최근 <span style="color: red;"><strong>KampingMate</strong></span> 프로젝트에서는 사용자 피드백을 적극 반영하여 서비스 품질을 향상시키고, 사용자 만족도를 높이는 데 기여하였습니다.
+    저의 강점은 <span style="color: #2e86c1;"><strong>사용자 중심의 사고</strong></span>와 <span style="color: #2e86c1;"><strong>서비스 마인드</strong></span>입니다. 저는 항상 사용자와 고객의 입장에서 생각하며, 그들의 요구와 기대에 부응하기 위해 최선을 다합니다. 또한, <span style="color: #2e86c1;"><strong>적극적인 문제 해결 태도</strong></span>를 통해 어려운 상황에서도 긍정적으로 해결책을 찾고 실행할 수 있습니다. 예를 들어, 최근 <span style="color: #2e86c1;"><strong>KampingMate</strong></span> 프로젝트에서는 사용자 피드백을 적극 반영하여 서비스 품질을 향상시키고, 사용자 만족도를 높이는 데 기여하였습니다.
 </p>
         </div>
     </div>
